--- a/Clinic Website/Web.config
+++ b/Clinic Website/Web.config
@@ -29,6 +29,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EmailPassword" value="321456987+-*" />
+    <add key="Email" value="ctmzg.2020@gmail.com" />
+
+
   </appSettings>
   <system.web>
     <authentication mode="None" />
