--- a/Clinic Website/Clinic Website.csproj
+++ b/Clinic Website/Clinic Website.csproj
@@ -1408,6 +1408,8 @@
     <Content Include="Views\front\package-lock.json" />
     <Content Include="Views\front\package.json" />
     <Content Include="Views\front\Thumbs.db" />
+    <Content Include="Views\Account\Info.cshtml" />
+    <Content Include="Views\Shared\banner.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202002071433359_ClinicWebsiteData.resx">
