--- a/Clinic Website/Web.config
+++ b/Clinic Website/Web.config
@@ -37,6 +37,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <globalization
+       enableClientBasedCulture="true"
+       culture="en-GB"/>
   </system.web>
   <system.webServer>
     <modules>
